external-crates/move/crates/move-compiler/tests/move_check/expansion/pack_no_fields_single_block_expr.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:4:21
  │
4 │         let s = S { false };
  │                     ^^^^^
  │                     │
  │                     Unexpected 'false'
  │                     Expected an identifier

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:4:28
  │
4 │         let s = S { false };
  │                            ^
  │                            │
  │                            Unexpected ';'
  │                            Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

