external-crates/move/crates/move-compiler/tests/move_check/expansion/pack_no_fields_single_block_expr.move
module 0x42::M {
    struct S { f: u64 }
    fun foo() {
        let s = S { false };
        let s = S { 0 };
    }
}
